# smart-support

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_telegram.py
backend/alembic/: env.py
backend/alembic/versions/: 20260418_000001_initial_schema.py
backend/app/: config.py  logging.py  main.py  prompts.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  chats.py  messages.py  rag.py  settings.py  suggestions.py  telegram.py  tickets.py
backend/app/db/: migrations.py  models.py  seed.py  session.py
backend/app/logging/: operations.py
backend/app/middleware/: db_logging.py  logging_middleware.py
backend/app/providers/: channel.py  embedding.py  llm.py  object_storage.py  registry.py  vector_store.py
backend/app/schemas/: analytics.py  chats.py  common.py  messages.py  rag.py  settings.py  suggestions.py  tickets.py
backend/app/services/: ai_orchestrator.py  analytics.py  chats.py  messages.py  outbox.py  rag.py  rag_worker.py  refs.py  scheduler.py  suggestions.py  telegram_integration.py  tickets.py
backend/prompts/: ai_operator.txt  suggestions.txt  ticket_summary.txt
backend/tests/: conftest.py  test_ai_orchestrator.py  test_analytics.py  test_api.py  test_messages_flow.py  test_outbox.py  test_rag.py  test_scheduler.py  test_seed_and_refs.py  test_suggestions.py
db/: schema.dbml
docs/: backend_implementation_plan.md  c4-component-backend.puml  (+4 more)
(+120 files in other folders)
