[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-support-backend"
version = "0.1.0"
description = "Backend for Smart Support"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "httpx==0.27.2",
    "apscheduler==3.10.4",
    "python-multipart==0.0.12",
    "qdrant-client==1.12.0",
    "rank-bm25==0.2.2",
    "boto3==1.35.36",
    "aioboto3==13.2.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["app*"]
